--- a/Predictive_Maintenance_in_Manufacturing.ipynb
+++ b/Predictive_Maintenance_in_Manufacturing.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNK9zjNuFFnfTuDy/9ke1XF",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMstJVUFQIe1kNzljtqxYLY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,25 +29,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HD_dSDrEnlMK",
-        "outputId": "9dd245df-03eb-46c2-881d-60d5438891b5"
+        "outputId": "275856b1-2a41-454e-ecd6-8b11001f43e4"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-e62f6821f973>\u001b[0m in \u001b[0;36m<cell line: 22>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;31m# Identify numeric columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mnumeric_columns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_dtypes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minclude\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Apply imputation only to numeric columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.5\n",
+            "Confusion Matrix:\n",
+            "[[1 1]\n",
+            " [0 0]]\n"
           ]
         }
       ],
@@ -55,53 +54,43 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import accuracy_score, classification_report\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.pipeline import make_pipeline\n",
         "\n",
-        "# Load the dataset\n",
-        "# Assuming your dataset is stored in a CSV file\n",
-        "data = pd.read_csv('Vehicle Maintenance- Service Records.csv')\n",
+        "# Creating a sample dataset for demonstration\n",
+        "data = {\n",
+        "    'temperature': [25, 30, 35, 20, 15, 10, 30, 25, 20, 15],\n",
+        "    'pressure': [1000, 950, 900, 1050, 1100, 1150, 950, 1000, 1050, 1100],\n",
+        "    'vibration': [0.5, 0.7, 1.2, 0.3, 0.4, 0.6, 0.8, 1.0, 1.1, 0.5],\n",
+        "    'machine_failure': [0, 0, 1, 0, 0, 0, 1, 0, 0, 0]\n",
+        "}\n",
         "\n",
-        "# Preprocess the data\n",
-        "# Convert categorical variables to numerical using Label Encoding\n",
-        "label_encoder = LabelEncoder()\n",
-        "categorical_columns = ['vehicle_type', 'brand', 'model', 'engine_type']\n",
-        "for col in categorical_columns:\n",
-        "    data[col] = label_encoder.fit_transform(data[col])\n",
+        "# Creating a DataFrame from the sample data\n",
+        "df = pd.DataFrame(data)\n",
         "\n",
-        "# Identify numeric columns\n",
-        "numeric_columns = data.select_dtypes(include=[np.number]).columns\n",
-        "\n",
-        "# Apply imputation only to numeric columns\n",
-        "imputer = SimpleImputer(strategy='mean')\n",
-        "data_imputed_numeric = pd.DataFrame(imputer.fit_transform(data[numeric_columns]), columns=numeric_columns)\n",
-        "\n",
-        "# Concatenate the imputed numeric columns with the non-numeric columns\n",
-        "data_imputed = pd.concat([data.drop(columns=numeric_columns), data_imputed_numeric], axis=1)\n",
-        "\n",
-        "\n",
-        "# Define features and target variable\n",
-        "features = data_imputed.drop(['slno', 'index_general', 'labour_cost', 'insurance'], axis=1)\n",
-        "target = data_imputed['index_general']\n",
+        "# Separate features (X) and target variable (y)\n",
+        "X = df.drop('machine_failure', axis=1)\n",
+        "y = df['machine_failure']\n",
         "\n",
         "# Split the data into training and testing sets\n",
-        "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
         "\n",
-        "# Train a Random Forest Classifier\n",
-        "rf_classifier = RandomForestClassifier(random_state=42)\n",
-        "parameters = {'n_estimators': [50, 100, 200]}\n",
-        "grid_search = GridSearchCV(rf_classifier, parameters, cv=3)\n",
-        "grid_search.fit(X_train, y_train)\n",
+        "# Create a pipeline with preprocessing and a random forest classifier\n",
+        "model = make_pipeline(StandardScaler(), RandomForestClassifier(n_estimators=100, random_state=42))\n",
         "\n",
-        "# Select the best model\n",
-        "best_rf_model = grid_search.best_estimator_\n",
+        "# Train the model\n",
+        "model.fit(X_train, y_train)\n",
+        "\n",
+        "# Make predictions on the test set\n",
+        "y_pred = model.predict(X_test)\n",
         "\n",
         "# Evaluate the model\n",
-        "y_pred = best_rf_model.predict(X_test)\n",
-        "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-        "print(\"Classification Report:\\n\", classification_report(y_test, y_pred))\n"
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "print(f\"Accuracy: {accuracy}\")\n",
+        "print(f\"Confusion Matrix:\\n{conf_matrix}\")\n"
       ]
     }
   ]
